Add omni complete

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/taglist"]
 	path = bundle/taglist
 	url = https://github.com/vim-scripts/taglist.vim.git
+[submodule "bundle/omni_cpp_complete"]
+	path = bundle/omni_cpp_complete
+	url = https://github.com/vim-scripts/OmniCppComplete.git
