--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,54 @@
 [submodule "bundle/vim-pathogen"]
 	path = bundle/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
+	url = git://github.com/tpope/vim-pathogen.git
 [submodule "bundle/vim-rails"]
 	path = bundle/vim-rails
-	url = https://github.com/tpope/vim-rails.git
+	url = git://github.com/tpope/vim-rails.git
 [submodule "bundle/jellybeans"]
 	path = bundle/jellybeans
-	url = https://github.com/nanotech/jellybeans.vim.git
+	url = git://github.com/nanotech/jellybeans.vim.git
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = http://github.com/scrooloose/nerdtree.git
 [submodule "bundle/taglist"]
 	path = bundle/taglist
-	url = https://github.com/vim-scripts/taglist.vim.git
+	url = git://github.com/vim-scripts/taglist.vim.git
 [submodule "bundle/omni_cpp_complete"]
 	path = bundle/omni_cpp_complete
-	url = https://github.com/vim-scripts/OmniCppComplete.git
+	url = git://github.com/vim-scripts/OmniCppComplete.git
 [submodule "bundle/bufexplorer"]
 	path = bundle/bufexplorer
-	url = https://github.com/vim-scripts/bufexplorer.zip.git
+	url = git://github.com/vim-scripts/bufexplorer.zip.git
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
+	url = git://github.com/tpope/vim-surround.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git://github.com/tpope/vim-fugitive.git
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
-	url = https://github.com/tpope/syntastic.git
+	url = git://github.com/scrooloose/syntastic.git
 [submodule "bundle/command-t"]
 	path = bundle/command-t
 	url = git://git.wincent.com/command-t.git
 [submodule "bundle/vim-endwise"]
 	path = bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
+	url = git://github.com/tpope/vim-endwise.git
 [submodule "bundle/ack"]
 	path = bundle/ack
-	url = https://github.com/vim-scripts/ack.vim.git
+	url = git://github.com/vim-scripts/ack.vim.git
 [submodule "bundle/conque"]
 	path = bundle/conque
-	url = https://github.com/vim-scripts/Conque-Shell.git
+	url = git://github.com/vim-scripts/Conque-Shell.git
 [submodule "bundle/yankring"]
 	path = bundle/yankring
-	url = https://github.com/vim-scripts/YankRing.vim.git
+	url = git://github.com/vim-scripts/YankRing.vim.git
 [submodule "bundle/a.vim"]
 	path = bundle/a.vim
-	url = https://github.com/vim-scripts/a.vim.git
+	url = git://github.com/vim-scripts/a.vim.git
 [submodule "bundle/vim-ruby-refactoring"]
 	path = bundle/vim-ruby-refactoring
-	url = https://github.com/ecomba/vim-ruby-refactoring.git
+	url = git://github.com/ecomba/vim-ruby-refactoring.git
 [submodule "bundle/vim-matchit"]
 	path = bundle/vim-matchit
-	url = https://github.com/mhz/vim-matchit.git
+	url = git://github.com/mhz/vim-matchit.git
